[project]
name = "maze-mrl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rurinka", email = "7807asd@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "maze-mrl:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maze_mrl"]
